--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head><title>Cloud on your desktop</title>
-  <body style="width: 100%; background-color: black;">
+  <body style="width: 100%; background-color: #fff;">
     <div id="main" style="margin: 100px auto 0 auto; width: 500px;">
-      <h1 style="color: #fff; text-align: center; width: 500px;">OONTZ OONTZ OONTZ</h1>
+      <h1 style="text-align: center; width: 500px;">Oooh YEAH!</h1>
       <img src="giphy.gif" alt="This is cool" style="width: 500px">
     </div>
   </body>
