--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
-<head><title>Cloud on your desktop</title>
+<head>
+  <meta http-equiv="cache-control" content="max-age=0" />
+  <meta http-equiv="cache-control" content="no-cache" />
+  <meta http-equiv="expires" content="0" />
+  <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+  <meta http-equiv="pragma" content="no-cache" />
+  <title>Cloud on your desktop</title>
   <body style="width: 100%; background-color: black;">
     <div id="main" style="margin: 100px auto 0 auto; width: 500px;">
       <h1 style="color: #fff; text-align: center; width: 500px;">OONTZ OONTZ OONTZ</h1>
