--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
   <title>Cloud on your desktop</title>
-  <body style="width: 100%; background-color: #000;">
+  <body style="width: 100%; background-color: #fff;">
     <div id="main" style="margin: 100px auto 0 auto; width: 500px;">
-      <h1 style="text-align: center; width: 500px; color: #fff">OONTZ OONTZ OONTZ</h1>
-      <img src="oontz.gif" alt="This is cool" style="width: 500px">
+      <h1 style="text-align: center; width: 500px; color: #000">Oooh YEAH!</h1>
+      <img src="v2.gif" alt="This is cool" style="width: 500px">
     </div>
   </body>
 </html>
